Fix ON-2428 Inline images are stretched

--- a/src/web/styles.less
+++ b/src/web/styles.less
@@ -31,6 +31,7 @@ xmp {
 
   img {
     max-width: 100%;
+    height: auto;
   }
 
   code {
